// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button & target blank 1`] = `
<a
  className="link hideOutline tapTransition pill accessibilityOutline inlineFlex justifyCenter itemsCenter button"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel="noopener noreferrer"
  tabIndex={0}
  target="_blank"
>
  InternalLink
</a>
`;

exports[`renders Button & target null 1`] = `
<a
  className="link hideOutline tapTransition pill accessibilityOutline inlineFlex justifyCenter itemsCenter button"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  tabIndex={0}
  target={null}
>
  InternalLink
</a>
`;

exports[`renders Button & target self 1`] = `
<a
  className="link hideOutline tapTransition pill accessibilityOutline inlineFlex justifyCenter itemsCenter button"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  tabIndex={0}
  target="_self"
>
  InternalLink
</a>
`;

exports[`renders Button with nofollow 1`] = `
<a
  className="link hideOutline tapTransition pill accessibilityOutline inlineFlex justifyCenter itemsCenter button"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel="nofollow"
  tabIndex={0}
  target={null}
>
  InternalLink
</a>
`;

exports[`renders Button with onClick 1`] = `
<a
  className="link hideOutline tapTransition pill accessibilityOutline inlineFlex justifyCenter itemsCenter button"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  tabIndex={0}
  target={null}
>
  InternalLink
</a>
`;

exports[`renders IconButton 1`] = `
<a
  className="link hideOutline tapTransition pill accessibilityOutline button enabled"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  tabIndex={0}
  target={null}
>
  <div
    className="pog transparent"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      aria-hidden={true}
      aria-label=""
      className="icon red iconBlock"
      height={18}
      role="img"
      viewBox="0 0 24 24"
      width={18}
    >
      <path
        d="test-file-stub"
      />
    </svg>
  </div>
</a>
`;

exports[`renders TapArea 1`] = `
<a
  className="link hideOutline tapTransition rounding0 accessibilityOutline block"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  tabIndex={0}
  target={null}
>
  <div
    className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
  >
    InternalLink
  </div>
</a>
`;

exports[`renders full-width Button 1`] = `
<a
  className="link hideOutline tapTransition pill accessibilityOutline flex justifyCenter itemsCenter button"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  tabIndex={0}
  target={null}
>
  InternalLink
</a>
`;

exports[`renders inline Button 1`] = `
<a
  className="link hideOutline tapTransition pill accessibilityOutline inlineFlex justifyCenter itemsCenter button"
  href="https://example.com"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  rel=""
  tabIndex={0}
  target={null}
>
  InternalLink
</a>
`;
